--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -16,7 +16,7 @@ const quotes = [
   '"How can you move forward if you keep regretting the past?" - Edward Elric ',
   '"The worst battle is between what you know, and what you feel" - Voilet Evergarden',
   '"I know we said goodbye, but I didn\'t know. It was forever." - Voilet Evergarden',
-  "\"If you always do what you've always done, you'll always get what you've always got.\" - Henry Ford",
+  '"If you always do what you\'ve always done, you\'ll always get what you\'ve always got." - Henry Ford',
 ];
 
 var errorText = randomFromArray(quotes);
