--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -4,13 +4,16 @@ import { getCollection } from "astro:content";
 import Layout from "../layouts/Layout.astro";
 import "../styles/globals.scss";
 
-const works = await getCollection("works");
+const works = await getCollection("works", ({ data }) => {
+  return data.draft !== true;
+});
+const sortedWorks = works.sort((o) => Number.MIN_SAFE_INTEGER + o.data.order)
 ---
 
 <Layout title="Works | Gerben Veenhof">
   <div class="works">
     {
-      works.map((work) => (
+      sortedWorks.map((work) => (
         <a class="work" href={`/works/${work.slug}`}>
           <Image
             src={import(`../assets/images/works/${work.data.image}.png`)}
