--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,4 @@
-// /* External SCSS Sheets */
+/* External SCSS Sheets */
 @import "include-media/dist/_include-media.scss";
 @import "@glidejs/glide/src/assets/sass/glide.core.scss";
 
