fix: move styles from global to exclusive

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,3 +48,12 @@ import Header from "../components/Header.astro";
     setRootStyleVariable("--template-color-accent-opposing", getRandomColor());
   </script>
 </html>
+
+<style lang="scss">
+  main {
+    padding: 0;
+    max-width: 1024px;
+    min-height: calc(100vh - 380px);
+    margin: 0 auto;
+  }
+</style>
