fix: move glide import to component

--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -1,5 +1,6 @@
 ---
 import { Image } from "@astrojs/image/components";
+import "@glidejs/glide/src/assets/sass/glide.core.scss";
 import "../styles/globals.scss";
 ---
 
@@ -66,6 +67,7 @@ import "../styles/globals.scss";
 </script>
 
 <style lang="scss">
+  @import "@glidejs/glide/src/assets/sass/glide.core.scss";
   @import "../styles/globals.scss";
 
   .glide {
