feat: pagination for posts

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import "../styles/globals.scss";
       <Icon name="ph:code-bold" aria-hidden="true" aria-label="code-icon" />
     </a>
     <a href="/works">works</a>
-    <a href="/posts">posts</a>
+    <a href="/posts/1">posts</a>
     <div id="toggle-colors" class="icon toggle-colors">
       <Icon
         id="toggle-icon-dark"
