--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -57,7 +57,7 @@ const sortedWorks = works.sort((o) => Number.MIN_SAFE_INTEGER + o.data.order)
         transition: all 0.2s ease-in-out;
       }
 
-      &:hover > picture > img {
+      &:hover > img {
         border: 2px solid $template-color-accent;
       }
 
