fix: code formatting not working

--- a/src/styles/_defaults.scss
+++ b/src/styles/_defaults.scss
@@ -95,12 +95,12 @@ h6 {
   border-radius: 0.3em;
 }
 
-// pre {
-//   background-color: $template-color-code-block;
-//   padding: 20px;
-//   border-radius: 5px;
-//   overflow-x: scroll;
-// }
+pre {
+  background-color: $template-color-code-block;
+  padding: 20px;
+  border-radius: 5px;
+  overflow-x: scroll;
+}
 
 .flex-box {
   display: flex;
