--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -4,13 +4,13 @@ import Button from "../../components/Button.astro";
 import Layout from "../../layouts/Layout.astro";
 import "../../styles/globals.scss";
 
-
-
 export async function getStaticPaths({ paginate }) {
   const posts = await getCollection("posts", ({ data }) => {
     return data.draft !== true;
   });
-  const sortedPosts = posts.sort((post) => Number.MIN_SAFE_INTEGER + post.data.date.getDate())
+  const sortedPosts = posts.sort(
+    (post) => Number.MIN_SAFE_INTEGER + post.data.date.getDate()
+  );
   return paginate(sortedPosts, { pageSize: 5 });
 }
 
@@ -21,15 +21,33 @@ const { page } = Astro.props;
   <div class="posts">
     {
       page.data.map((post) => (
-        <a class="post" href={`/post/${post.slug}`}>
-            <h2>{ post.data.title }</h2>
-        </a>
-        <p>{ post.data.description }</p>
+        <div>
+          <a
+            rel="prefetch"
+            class="post"
+            href={`/post/${post.slug}`}
+          >
+            <h2>{post.data.title}</h2>
+          </a>
+          <p>{post.data.description}</p>
+        </div>
       ))
     }
   </div>
   <div class="pagination">
-    {page.url.prev ? <Button href={page.url.prev} icon="mdi:arrow-back-circle">Previous</Button> : null}
-    {page.url.next ? <Button href={page.url.next} icon="mdi:arrow-forward-circle">Next</Button> : null}
+    {
+      page.url.prev ? (
+        <Button href={page.url.prev} icon="mdi:arrow-back-circle">
+          Previous
+        </Button>
+      ) : null
+    }
+    {
+      page.url.next ? (
+        <Button href={page.url.next} icon="mdi:arrow-forward-circle">
+          Next
+        </Button>
+      ) : null
+    }
   </div>
 </Layout>
