--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -7,14 +7,14 @@ import "../styles/globals.scss";
 const works = await getCollection("works", ({ data }) => {
   return data.draft !== true;
 });
-const sortedWorks = works.sort((o) => Number.MIN_SAFE_INTEGER + o.data.order)
+const sortedWorks = works.sort((o) => Number.MIN_SAFE_INTEGER + o.data.order);
 ---
 
 <Layout title="Works | Gerben Veenhof">
   <div class="works">
     {
       sortedWorks.map((work) => (
-        <a class="work" href={`/works/${work.slug}`}>
+        <a rel="prefetch" class="work" href={`/works/${work.slug}`}>
           <Image
             src={import(`../assets/images/works/${work.data.image}.png`)}
             alt="Korfbal Trainer"
