--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -9,6 +9,7 @@ import "../styles/globals.scss";
     <ul class="glide__slides">
       <li class="glide__slide">
         <a
+          rel="prefetch"
           href="/work/korfbal_trainer/"
           aria-label="Check the Korfbal Trainer project"
         >
@@ -20,7 +21,11 @@ import "../styles/globals.scss";
         </a>
       </li>
       <li class="glide__slide">
-        <a href="/work/keydungeon/" aria-label="Check the Keydungeon project">
+        <a
+          rel="prefetch"
+          href="/work/keydungeon/"
+          aria-label="Check the Keydungeon project"
+        >
           <Image
             src={import("../assets/images/works/keydungeon.png")}
             alt="Korfbal Trainer"
@@ -29,7 +34,11 @@ import "../styles/globals.scss";
         </a>
       </li>
       <li class="glide__slide">
-        <a href="/work/aq3d_bot/" aria-label="Check the AQ3D Bot project">
+        <a
+          rel="prefetch"
+          href="/work/aq3d_bot/"
+          aria-label="Check the AQ3D Bot project"
+        >
           <Image
             src={import("../assets/images/works/aq3d_bot.png")}
             alt="Korfbal Trainer"
@@ -38,7 +47,11 @@ import "../styles/globals.scss";
         </a>
       </li>
       <li class="glide__slide">
-        <a href="/work/scrapyard/" aria-label="Check the Scrapyard Mod project">
+        <a
+          rel="prefetch"
+          href="/work/scrapyard/"
+          aria-label="Check the Scrapyard Mod project"
+        >
           <Image
             src={import("../assets/images/works/scrapyard.png")}
             alt="Korfbal Trainer"
