fix: footer icons and carbon badge

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -64,7 +64,7 @@ import "../styles/globals.scss";
         >
       </div>
     </div>
-    <div id="wcb" class="carbonbadge wcb-d"></div>
+    <div id="wcb" class="carbonbadge wcb-d" />
   </div>
 </footer>
 <style lang="scss">
@@ -87,7 +87,7 @@ import "../styles/globals.scss";
 
       a {
         [astro-icon] {
-          width: 50px;
+          width: 55px;
           color: $template-color-accent;
           fill: $template-color-accent;
         }
@@ -126,7 +126,7 @@ import "../styles/globals.scss";
     }
 
     .carbonbadge {
-      margin-bottom: 25px;
+      margin: 25px 0 10px 0;
     }
   }
 </style>
