--- a/src/components/FlexCenter.astro
+++ b/src/components/FlexCenter.astro
@@ -9,6 +9,7 @@ import "../styles/globals.scss";
 <style lang="scss">
     @import "../styles/globals.scss";
     .flex-center {
+        margin-top: 15px;
         display: flex;
         flex-direction: column;
         justify-content: center;
