--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,7 @@ import Header from "../components/Header.astro";
       }}
       extend={{
         meta: [
+          { name: "description", content: { description }},
           { name: "twitter:title", content: { title } },
           { name: "twitter:description", content: { description } },
         ],
