--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -11,6 +11,7 @@ const quotes = [
   '"The worst battle is between what you know, and what you feel" - Voilet Evergarden',
   '"I know we said goodbye, but I didn\'t know. It was forever." - Voilet Evergarden',
   "\"If you always do what you've always done, you'll always get what you've always got.\" - Henry Ford",
+  '"Sorry I gotta walk my flowers and water my dog." - Teensie from Rayman',
 ];
 
 function randomFromArray(inputArray) {
