build: test if the http bug is caused by prefetching

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,11 +5,11 @@ import "../styles/globals.scss";
 
 <header>
   <nav>
-    <a rel="prefetch" class="icon" href="/" aria-label="Home">
+    <a class="icon" href="/" aria-label="Home">
       <Icon name="ph:code-bold" aria-hidden="true" aria-label="code-icon" />
     </a>
-    <a rel="prefetch" href="/works">works</a>
-    <a rel="prefetch" href="/posts/1">posts</a>
+    <a href="/works">works</a>
+    <a href="/posts/1">posts</a>
     <div id="toggle-colors" class="icon toggle-colors">
       <Icon
         id="toggle-icon-dark"
