--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,7 +11,7 @@ import Layout from "../layouts/Layout.astro";
     <p>But have a quote instead:</p>
     <Quote class="quote" />
     <FlexCenter>
-      <Button href="/" icon="mdi:arrow-back-circle" preFetch={false}>
+      <Button href="/" icon="mdi:arrow-back-circle" nofollow={false}>
         Homepage
       </Button>
     </FlexCenter>
