feat: fix bug wher quote wouldn't update

--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -18,7 +18,11 @@ function randomFromArray(inputArray) {
   return inputArray[Math.floor(Math.random() * inputArray.length)];
 }
 
-const quote = randomFromArray(quotes);
+export interface Props {
+  quote: string;
+}
+
+const { quote = randomFromArray(quotes) } = Astro.props;
 ---
 
 <div class="quote">
