--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,6 +12,10 @@ html {
         --template-color: #f5f5f5;
         --template-color-opposing: #202020;
         --template-color-code-block: #e6e6e6;
+
+        --color-orange: #995d08;
+        --color-purple: #501044;
+        --color-cyan: #005959;
     }
 }
 
@@ -20,7 +24,6 @@ html {
 $template-color: var(--template-color);
 $template-color-opposing: var(--template-color-opposing);
 $template-color-accent: var(--template-color-accent);
-$template-color-accent-rgb: var(--template-color-accent-rgb);
 $template-color-accent-opposing: var(--template-color-accent-opposing);
 $template-color-code-block: var(--template-color-code-block);
 
