chore: code clean-up

--- a/src/components/Label.astro
+++ b/src/components/Label.astro
@@ -14,7 +14,7 @@ import "../styles/globals.scss";
     border-radius: 10px;
     display: inline-flex;
     background-color: $template-color-accent;
-    color: #fff;
+    color: $template-color;
     font-size: 1.1rem;
   }
 </style>
