chore: move all assets to public folder

--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -13,7 +13,7 @@ import "../styles/globals.scss";
           aria-label="Check the Korfbal Trainer project"
         >
           <Picture
-            src={import("../assets/images/works/korfbal_trainer.png")}
+            src="../assets/images/works/korfbal_trainer.png"
             alt="Korfbal Trainer"
             widths={[1024, 500]}
             aspectRatio={16 / 9}
@@ -30,7 +30,7 @@ import "../styles/globals.scss";
           aria-label="Check the Keydungeon project"
         >
           <Picture
-            src={import("../assets/images/works/keydungeon.png")}
+            src="../assets/images/works/keydungeon.png"
             alt="Keydungeon"
             widths={[1024, 500]}
             aspectRatio={16 / 9}
@@ -47,7 +47,7 @@ import "../styles/globals.scss";
           aria-label="Check the AQ3D Bot project"
         >
           <Picture
-            src={import("../assets/images/works/aq3d_bot.png")}
+            src="../assets/images/works/aq3d_bot.png"
             alt="AQ3D Bot"
             widths={[1024, 500]}
             aspectRatio={16 / 9}
@@ -64,7 +64,7 @@ import "../styles/globals.scss";
           aria-label="Check the Scrapyard Mod project"
         >
           <Picture
-            src={import("../assets/images/works/scrapyard.png")}
+            src="../assets/images/works/scrapyard.png"
             alt="Scrapyard Mod"
             widths={[1024, 500]}
             aspectRatio={16 / 9}
